Fixed a poor string handling bug, now long words break into new line

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,12 @@ body {
     color: white;
     font-size: 20px;
     position: relative;
+    width: 400px;
+    
+    display: flex;
+    align-items: center;
+
+    word-break: break-all;
 }
 
 .checked {
@@ -78,13 +84,13 @@ body {
 
 .cross-btn {
     position: absolute;
-    right: 0;
     width: 40px;
     height: 40px;
     font-size: 20px;
     line-height: 40px;
     text-align: center;
     border-radius: 50%;
+    left: 425px;
 }
 
 .tick-btn {
@@ -97,7 +103,7 @@ body {
     border-radius: 50%;
     border: 2px solid  rgb(255, 89, 69);
     color: white;
-    right: 480px;
+    right: 420px;
 }
 
 .tick-btn:hover {
